# boilerplate

./: .gitignore  README.md  docker-compose.yaml
back/: Dockerfile  manage.py  pyproject.toml
back/games/: apps.py  models.py  signals.py  tests.py
back/games/migrations/: 0001_initial.py  0002_auto_20200315_1959.py  0003_auto_20200315_2133.py
back/gql/: schema.py
back/gql/games/: filters.py  mutations.py  types.py
back/pingpong/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
front/: .babelrc  package.json  tslint.json
front/src/: App.tsx  generatedModels.tsx  index.css  index.tsx
front/src/__tests__/: CreateGameForm.test.tsx
front/src/views/Games/: CreateGameForm.tsx  index.tsx  queries.ts
